--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/special">
 
     <EditText
         android:id="@+id/recipeInput"
@@ -16,12 +16,12 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:imeOptions="actionSearch"
+        android:hint="Search for a recipe, Njam!"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:textColorHint="@color/special_variant"
         android:inputType="text"
-        android:textSize="20sp"
+        android:textSize="18sp"
         tools:ignore="SpeakableTextPresentCheck"/>
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <TextView
         android:id="@+id/textViewRecipe"
@@ -30,13 +30,8 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:text="Top Recipes"
-        android:textSize="30sp"/>
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/recipeInput"-->
-    <!--        app:layout_constraintVertical_bias="1.0"/>-->
+        android:textColor="@color/special_purple"
+        android:textSize="26sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tr_recycler"
@@ -44,11 +39,5 @@
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"/>
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/textViewRecipe"-->
-    <!--        app:layout_constraintVertical_bias="1.0" />-->
 
 </LinearLayout>
