--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,20 +5,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailsActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/special">
 
-    <TextView
-        android:id="@+id/recipeInstructions"
+    <ImageView
+        android:id="@+id/recipeImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title">
-    </TextView>
+        android:foregroundTint="@color/black"
+        android:cropToPadding="true"
+        android:scaleType="centerCrop"
+        android:padding="4dp">
+    </ImageView>
 
-    <Button
-        android:id="@+id/recipeButton"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="View recipe online">
-    </Button>
+        android:padding="6dp"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/recipeTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="24sp"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                android:padding="4dp">
+            </TextView>
+
+            <TextView
+                android:id="@+id/recipeSource"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/special_purple"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:padding="4dp"
+                android:text="Source">
+            </TextView>
+
+            <TextView
+                android:id="@+id/recipeLikes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/special_blue"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:padding="4dp"
+                android:layout_marginBottom="45dp"
+                android:text="Likes">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ingredients:"
+                android:textColor="@color/black"
+                android:padding="4dp"
+                android:textStyle="bold"
+                android:textSize="16sp">
+            </TextView>
+
+            <TextView
+                android:id="@+id/recipeScore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Score"
+                android:textSize="17sp"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                android:padding="4dp">
+            </TextView>
+
+            <TextView
+                android:id="@+id/recipeServings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Servings"
+                android:textSize="17sp"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                android:padding="4dp">
+            </TextView>
+
+            <TextView
+                android:id="@+id/recipePrep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Preparation"
+                android:textSize="17sp"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                android:padding="4dp">
+            </TextView>
+
+            <Button
+                android:id="@+id/recipeButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:drawableLeft="@android:drawable/ic_menu_view"
+                android:text="View recipe online">
+            </Button>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
