--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -38,7 +38,8 @@
                 android:textSize="24sp"
                 android:textColor="@color/purple_200"
                 android:textStyle="bold"
-                android:padding="4dp">
+                android:padding="4dp"
+                android:layout_marginStart="4dp">
             </TextView>
 
             <TextView
@@ -49,6 +50,7 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:padding="4dp"
+                android:layout_marginStart="4dp"
                 android:text="Source">
             </TextView>
 
@@ -60,6 +62,7 @@
                 android:textStyle="bold"
                 android:textSize="14sp"
                 android:padding="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginBottom="45dp"
                 android:text="Likes">
             </TextView>
@@ -70,9 +73,17 @@
                 android:text="Ingredients:"
                 android:textColor="@color/black"
                 android:padding="4dp"
+                android:layout_marginStart="4dp"
                 android:textStyle="bold"
                 android:textSize="16sp">
             </TextView>
+
+            <GridView
+                android:id="@+id/ingredients_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/recipeScore"
@@ -81,6 +92,7 @@
                 android:text="Score"
                 android:textSize="17sp"
                 android:textColor="@color/purple_200"
+                android:layout_marginStart="4dp"
                 android:textStyle="bold"
                 android:padding="4dp">
             </TextView>
@@ -93,6 +105,7 @@
                 android:textSize="17sp"
                 android:textColor="@color/purple_200"
                 android:textStyle="bold"
+                android:layout_marginStart="4dp"
                 android:padding="4dp">
             </TextView>
 
@@ -104,6 +117,7 @@
                 android:textSize="17sp"
                 android:textColor="@color/purple_200"
                 android:textStyle="bold"
+                android:layout_marginStart="4dp"
                 android:padding="4dp">
             </TextView>
 
