--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -25,110 +25,116 @@
         android:layout_margin="8dp"
         app:cardCornerRadius="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/recipeTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Title"
-                android:textSize="24sp"
-                android:textColor="@color/purple_200"
-                android:textStyle="bold"
-                android:padding="4dp"
-                android:layout_marginStart="4dp">
-            </TextView>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/recipeSource"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/special_purple"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:padding="4dp"
-                android:layout_marginStart="4dp"
-                android:text="Source">
-            </TextView>
+                <TextView
+                    android:id="@+id/recipeTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Title"
+                    android:textSize="24sp"
+                    android:textColor="@color/purple_200"
+                    android:textStyle="bold"
+                    android:padding="5dp"
+                    android:layout_marginStart="5dp">
+                </TextView>
 
-            <TextView
-                android:id="@+id/recipeLikes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/special_blue"
-                android:textStyle="bold"
-                android:textSize="14sp"
-                android:padding="4dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="45dp"
-                android:text="Likes">
-            </TextView>
+                <TextView
+                    android:id="@+id/recipeSource"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/special_purple"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:layout_marginStart="5dp"
+                    android:text="Source">
+                </TextView>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Ingredients:"
-                android:textColor="@color/black"
-                android:padding="4dp"
-                android:layout_marginStart="4dp"
-                android:textStyle="bold"
-                android:textSize="16sp">
-            </TextView>
+                <TextView
+                    android:id="@+id/recipeLikes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/special_blue"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:padding="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginBottom="30dp"
+                    android:text="Likes">
+                </TextView>
 
-            <GridView
-                android:id="@+id/ingredients_listview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ingredients:"
+                    android:textColor="@color/black"
+                    android:padding="5dp"
+                    android:layout_marginStart="5dp"
+                    android:textStyle="bold"
+                    android:textSize="16sp">
+                </TextView>
 
-            <TextView
-                android:id="@+id/recipeScore"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Score"
-                android:textSize="17sp"
-                android:textColor="@color/purple_200"
-                android:layout_marginStart="4dp"
-                android:textStyle="bold"
-                android:padding="4dp">
-            </TextView>
+                <GridView
+                    android:id="@+id/ingredients_listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
 
-            <TextView
-                android:id="@+id/recipeServings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Servings"
-                android:textSize="17sp"
-                android:textColor="@color/purple_200"
-                android:textStyle="bold"
-                android:layout_marginStart="4dp"
-                android:padding="4dp">
-            </TextView>
+                <TextView
+                    android:id="@+id/recipeScore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Score"
+                    android:textSize="17sp"
+                    android:textColor="@color/purple_200"
+                    android:layout_marginStart="5dp"
+                    android:textStyle="bold"
+                    android:padding="5dp">
+                </TextView>
 
-            <TextView
-                android:id="@+id/recipePrep"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Preparation"
-                android:textSize="17sp"
-                android:textColor="@color/purple_200"
-                android:textStyle="bold"
-                android:layout_marginStart="4dp"
-                android:padding="4dp">
-            </TextView>
+                <TextView
+                    android:id="@+id/recipeServings"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Servings"
+                    android:textSize="17sp"
+                    android:textColor="@color/purple_200"
+                    android:textStyle="bold"
+                    android:layout_marginStart="5dp"
+                    android:padding="5dp">
+                </TextView>
 
-            <Button
-                android:id="@+id/recipeButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="30dp"
-                android:drawableLeft="@android:drawable/ic_menu_view"
-                android:text="View recipe online">
-            </Button>
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/recipePrep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Preparation"
+                    android:textSize="17sp"
+                    android:textColor="@color/purple_200"
+                    android:textStyle="bold"
+                    android:layout_marginStart="5dp"
+                    android:padding="5dp">
+                </TextView>
+
+                <Button
+                    android:id="@+id/recipeButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:drawableLeft="@android:drawable/ic_menu_view"
+                    android:text="View recipe online">
+                </Button>
+            </LinearLayout>
+        </ScrollView>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
