--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,22 +14,24 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:imeOptions="actionSearch"
-        android:hint="Search for a recipe, Njam!"
         android:drawableLeft="@android:drawable/ic_menu_search"
-        android:textColorHint="@color/special_variant"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:padding="7dp"
+        android:hint="@string/searchbar_input"
+        android:imeOptions="actionSearch"
         android:inputType="text"
+        android:textColorHint="@color/special_variant"
         android:textSize="18sp"
-        tools:ignore="SpeakableTextPresentCheck"/>
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textViewRecipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:text="Top Recipes"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/top_recipes"
         android:textColor="@color/special_purple"
         android:textSize="26sp"/>
 
